# IfcOpenShell

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
cmake/: CMakeLists.txt
nix/: build-all.sh
src/examples/: CMakeLists.txt  IfcAdvancedHouse.cpp  IfcDumpGeomExample.cpp  IfcTypes.h
src/ifcconvert/: IfcConvert.cpp  JSONSerializer.cpp  JSONSerializer.h
src/ifcgeom/: IfcGeomIterator.h
