cmake_minimum_required(VERSION 3.6)
project(IfcOpenShell)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    build/CMakeFiles/3.7.1/CompilerIdC/CMakeCCompilerId.c
    build/CMakeFiles/3.7.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
    build/CMakeFiles/feature_tests.c
    build/CMakeFiles/feature_tests.cxx
    build/nbproject/private/c_standard_headers_indexer.c
    build/nbproject/private/cpp_standard_headers_indexer.cpp
    build/version.cxx
    src/examples/arbitrary_open_profile_def.cpp
    src/examples/composite_profile_def.cpp
    src/examples/csg_primitive.cpp
    src/examples/ellipse_pies.cpp
    src/examples/faces.cpp
    src/examples/ifc_curve_rebar.cpp
    src/examples/IfcAdvancedHouse.cpp
    src/examples/IfcDumpGeomExample.cpp
    src/examples/IfcOpenHouse.cpp
    src/examples/IfcParseExamples.cpp
    src/examples/profiles.cpp
    src/examples/suzanne_geometry.h
    src/examples/triangulated_faceset.cpp
    src/ifcconvert/ColladaSerializer.cpp
    src/ifcconvert/ColladaSerializer.h
    src/ifcconvert/GeometrySerializer.h
    src/ifcconvert/IfcConvert.cpp
    src/ifcconvert/IgesSerializer.h
    src/ifcconvert/OpenCascadeBasedSerializer.cpp
    src/ifcconvert/OpenCascadeBasedSerializer.h
    src/ifcconvert/Serializer.h
    src/ifcconvert/StepSerializer.h
    src/ifcconvert/SvgSerializer.cpp
    src/ifcconvert/SvgSerializer.h
    src/ifcconvert/util.cpp
    src/ifcconvert/util.h
    src/ifcconvert/WavefrontObjSerializer.cpp
    src/ifcconvert/WavefrontObjSerializer.h
    src/ifcconvert/XmlSerializer.cpp
    src/ifcconvert/XmlSerializer.h
    src/ifcgeom/ifc_geom_api.h
    src/ifcgeom/IfcGeom.h
    src/ifcgeom/IfcGeomCurves.cpp
    src/ifcgeom/IfcGeomElement.h
    src/ifcgeom/IfcGeomFaces.cpp
    src/ifcgeom/IfcGeomFunctions.cpp
    src/ifcgeom/IfcGeomHelpers.cpp
    src/ifcgeom/IfcGeomIterator.h
    src/ifcgeom/IfcGeomIteratorSettings.h
    src/ifcgeom/IfcGeomMaterial.cpp
    src/ifcgeom/IfcGeomMaterial.h
    src/ifcgeom/IfcGeomRenderStyles.cpp
    src/ifcgeom/IfcGeomRenderStyles.h
    src/ifcgeom/IfcGeomRepresentation.cpp
    src/ifcgeom/IfcGeomRepresentation.h
    src/ifcgeom/IfcGeomSerialisation.cpp
    src/ifcgeom/IfcGeomShapes.cpp
    src/ifcgeom/IfcGeomShapeType.h
    src/ifcgeom/IfcGeomWires.cpp
    src/ifcgeom/IfcRegister.cpp
    src/ifcgeom/IfcRegister.h
    src/ifcgeom/IfcRegisterConvertCurve.h
    src/ifcgeom/IfcRegisterConvertFace.h
    src/ifcgeom/IfcRegisterConvertShape.h
    src/ifcgeom/IfcRegisterConvertShapes.h
    src/ifcgeom/IfcRegisterConvertWire.h
    src/ifcgeom/IfcRegisterCreateCache.h
    src/ifcgeom/IfcRegisterDef.h
    src/ifcgeom/IfcRegisterGeomHeader.h
    src/ifcgeom/IfcRegisterPurgeCache.h
    src/ifcgeom/IfcRegisterShapeType.h
    src/ifcgeom/IfcRegisterUndef.h
    src/ifcgeom/IfcRepresentationShapeItem.h
    src/ifcgeomserver/IfcGeomServer.cpp
    src/ifcjni/IfcJni.cpp
    src/ifcjni/org_ifcopenshell_IfcOpenShellModel.h
    src/ifcmax/IfcMax.cpp
    src/ifcmax/IfcMax.h
    src/ifcparse/Ifc2x3-latebound.cpp
    src/ifcparse/Ifc2x3-latebound.h
    src/ifcparse/Ifc2x3.cpp
    src/ifcparse/Ifc2x3.h
    src/ifcparse/Ifc2x3enum.h
    src/ifcparse/Ifc4-latebound.cpp
    src/ifcparse/Ifc4-latebound.h
    src/ifcparse/Ifc4.cpp
    src/ifcparse/Ifc4.h
    src/ifcparse/Ifc4enum.h
    src/ifcparse/ifc_parse_api.h
    src/ifcparse/IfcCharacterDecoder.cpp
    src/ifcparse/IfcCharacterDecoder.h
    src/ifcparse/IfcEntityDescriptor.h
    src/ifcparse/IfcException.h
    src/ifcparse/IfcFile.h
    src/ifcparse/IfcGlobalId.cpp
    src/ifcparse/IfcGlobalId.h
    src/ifcparse/IfcHierarchyHelper.cpp
    src/ifcparse/IfcHierarchyHelper.h
    src/ifcparse/IfcLateBoundEntity.cpp
    src/ifcparse/IfcLateBoundEntity.h
    src/ifcparse/IfcLogger.cpp
    src/ifcparse/IfcLogger.h
    src/ifcparse/IfcParse.cpp
    src/ifcparse/IfcParse.h
    src/ifcparse/IfcSIPrefix.cpp
    src/ifcparse/IfcSIPrefix.h
    src/ifcparse/IfcSpfHeader.cpp
    src/ifcparse/IfcSpfHeader.h
    src/ifcparse/IfcSpfStream.h
    src/ifcparse/IfcUtil.cpp
    src/ifcparse/IfcUtil.h
    src/ifcparse/IfcWritableEntity.h
    src/ifcparse/IfcWrite.cpp
    src/ifcparse/IfcWrite.h
    src/ifcwrap/utils/type_conversion.i
    src/ifcwrap/utils/typemaps_in.i
    src/ifcwrap/utils/typemaps_out.i
    src/ifcwrap/IfcGeomWrapper.i
    src/ifcwrap/IfcParseWrapper.i
    src/ifcwrap/IfcPython.i
    src/qtviewer/main.cpp
    src/qtviewer/mainwindow.cpp
    src/qtviewer/mainwindow.h
    win/patches/occt-V7_0_0-9059ca1_OpenGl_PrimitiveArray.cxx
    win/patches/occt-V7_0_0-9059ca1_XCAFDoc_Dimension.cxx
    win/patches/occt-V7_0_0-9059ca1_XCAFDoc_GeomTolerance.cxx)

add_executable(IfcOpenShell ${SOURCE_FILES})